# worldcup-iptv-player

./: .gitignore  README.md  build.gradle  gradlew
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  playlist-parser.cpp
app/src/main/java/com/example/iptvplayer/: AdMobHelper.kt  M3UParser.kt  MainActivity.kt  NativePlaylistParser.kt
app/src/main/java/com/example/iptvplayer/data/: PlaylistPreferences.kt  PlaylistRepository.kt
app/src/main/java/com/example/iptvplayer/model/: Channel.kt
app/src/main/java/com/example/iptvplayer/player/: PlayerController.kt
app/src/main/java/com/example/iptvplayer/service/: PlaybackForegroundService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-night/: styles.xml
